--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -882,4 +882,56 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
     0%   {bottom:0px;}
     100%  {bottom:7px;}
 }
+
+
+
+
+.carousel {
+    position: relative;
+    width: 70px;
+    height: 70px;
+    margin-top: 16px;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.carousel-inner {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    transition: transform 0.5s ease;
+}
+
+.carousel-item {
+    min-width: 100%;
+    height: 100%;
+    display: flex;
+    
+    border-radius: 50%;
+}
+
+
+
+.carousel-control-prev {
+    left: -40px;
+}
+
+.carousel-control-next {
+    right: -40px;
+}
+
+.navbar-dark {
+
+color: white;
+}
+.imgset{
+width: 100%;
+height: 100%;
+border-radius: 50%;
+}
+
+
+
+
 /*========================Thank you=================
